Tweak z-index master list. Fix whitespace.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -89,8 +89,8 @@ $z-index-navbar-bg:     10;
 $z-index-main:          10;
 $z-index-level:         10;
 $z-index-navbar:        20;
-$z-index-menu:        1000;
-$z-index-drag-layer:  2000;
+$z-index-menu:          30;
+$z-index-drag-layer:    40;
 
 
 // Navbbar
